--- a/client/src/app/sales/sales.component.html
+++ b/client/src/app/sales/sales.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="example-container mat-elevation-z8">
   <h2>Sales List</h2>
   <div class="example-loading-shade"
@@ -46,4 +47,5 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="['/sales-details/', row._id]"></tr>
     </table>
   </div>
+</div>
 </div>
