--- a/client/src/app/sales-details/sales-details.component.html
+++ b/client/src/app/sales-details/sales-details.component.html
@@ -1,3 +1,5 @@
+
+<div class="container">
 <div class="example-container mat-elevation-z8">
   <h2>Sales Cases Details</h2>
   <div class="example-loading-shade"
@@ -30,4 +32,4 @@
       <a mat-flat-button color="warn" (click)="deleteSales(sales._id)"><mat-icon>delete</mat-icon> Sales</a>
     </mat-card-actions>
   </mat-card>
-</div>
+</div></div>
